discord-frontend/hartex-discord-commands-test/tests/ui/literal_parameter.stderr
error: expected literal; found `true`
  --> tests/ui/literal_parameter.rs:26:27
   |
26 | #[metadata(command_type = true)]
   |                           ^^^^
